[package]
name = "pxsort"
description = "Sort the pixels in an image"
version = "0.3.2"
authors = ["George Kaplan <george@georgekaplan.xyz>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/g-s-k/pxsort"
readme = "./README.md"

[dependencies]
image = "0.21.0"
structopt = "0.2.15"
indicatif = "0.11.0"
