[package]
name = "www"
version = "0.1.0"
authors = ["George Kaplan <george@georgekaplan.xyz>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
image = { version = "0.21.1", default-features = false, features = ["gif_codec", "jpeg", "ico", "png_codec", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt"] }
pxsort = { path = "../.." }
stdweb = "0.4.17"
yew = "0.6.0"
